--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
 	<meta charset="utf-8">
@@ -50,16 +50,16 @@
 		</h1>
 		<span class="instructions">Click/Touch and Drag to create ink</span>
 		<div class="social-icons">
-			<a href="//twitter.com/hennessyevan" target="_blank" class="twitter">
+			<a href="//twitter.com/hennessyevan" rel="noopener" target="_blank" class="twitter">
 				<i class="fab fa-twitter"></i>
 			</a>
-			<a href="//instagram.com/hennessyevan" target="_blank" class="instagram">
+			<a href="//instagram.com/hennessyevan" rel="noopener" target="_blank" class="instagram">
 				<i class="fab fa-instagram"></i>
 			</a>
-			<a href="//github.com/hennessyevan" target="_blank" class="github">
+			<a href="//github.com/hennessyevan" rel="noopener" target="_blank" class="github">
 				<i class="fab fa-github"></i>
 			</a>
-			<a href="//medium.com/@hennessyevan" target="_blank" class="medium">
+			<a href="//medium.com/@hennessyevan" rel="noopener" target="_blank" class="medium">
 				<i class="fab fa-medium"></i>
 			</a>
 		</div>
