Add manifest and icons and twitter card support

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
 	<meta charset="utf-8">
 	<title>Evan Hennessy's Portfolio</title>
+	<meta name="description" content="Evan Hennessy's 2018 Web Portfolio">
+	<meta name="keywords" "evan, hennessy, web, portfolio, design, development, web-app, pwa, ink, fluid">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, viewport-fit=cover">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -16,6 +18,11 @@
 	<meta property="og:title" content="Evan Hennessy :: Web Portfolio">
 	<meta property="og:url" content="https://hennessyevan.com/">
 	<meta property="og:image" content="grab.png">
+	<meta property="twitter:site" content="hennessyevan">
+	<meta property="twitter:creator" content="hennessyevan">
+	<meta property="twitter:title" content="Evan Hennessy's Web Site">
+	<meta property="twitter:description" content="Evan Hennessy's 2018 Web Portfolio">
+	<meta property="twitter:image" content="grab.png">
 	<link rel="stylesheet" href="./style.css">
 	<script>
 		window.ga = window.ga || function () { (ga.q = ga.q || []).push(arguments) }; ga.l = +new Date;
@@ -64,6 +71,9 @@
 			</a>
 		</div>
 	</div>
+	<span class="after">Canadian developer with a passion for good work and tasty integrations. Philosophy/Music Major turned Entrepreneur/Software
+		Developer.
+	</span>
 	<script src="./script.js"></script>
 </body>
 
