--- a/index.html
+++ b/index.html
@@ -1,80 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="utf-8" />
+		<title>Evan Hennessy's Portfolio</title>
+		<meta name="description" content="Evan Hennessy's 2018 Web Portfolio" />
+		<meta name="keywords" "evan, hennessy, web, portfolio, design, development, web-app, pwa, ink, fluid">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, viewport-fit=cover" />
+		<meta name="apple-mobile-web-app-capable" content="yes" />
+		<meta name="apple-mobile-web-app-status-bar-style" content="black" />
+		<meta name="mobile-web-app-capable" content="yes" />
+		<link rel="apple-touch-icon" href="logo.png" />
+		<link rel="icon" href="logo.png" />
+		<meta http-equiv="CACHE-CONTROL" content="NO-CACHE" />
 
-<head>
-	<meta charset="utf-8">
-	<title>Evan Hennessy's Portfolio</title>
-	<meta name="description" content="Evan Hennessy's 2018 Web Portfolio">
-	<meta name="keywords" "evan, hennessy, web, portfolio, design, development, web-app, pwa, ink, fluid">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, viewport-fit=cover">
-	<meta name="apple-mobile-web-app-capable" content="yes">
-	<meta name="apple-mobile-web-app-status-bar-style" content="black">
-	<meta name="mobile-web-app-capable" content="yes">
-	<link rel="apple-touch-icon" href="logo.png">
-	<link rel="icon" href="logo.png">
-	<meta http-equiv="CACHE-CONTROL" content="NO-CACHE">
+		<meta property="og:type" content="website" />
+		<meta property="og:title" content="Evan Hennessy :: Web Portfolio" />
+		<meta property="og:url" content="https://hennessyevan.com/" />
+		<meta property="og:image" content="grab.png" />
+		<meta property="twitter:site" content="hennessyevan" />
+		<meta property="twitter:creator" content="hennessyevan" />
+		<meta property="twitter:title" content="Evan Hennessy's Web Site" />
+		<meta property="twitter:description" content="Evan Hennessy's 2018 Web Portfolio" />
+		<meta property="twitter:image" content="grab.png" />
+		<link rel="stylesheet" href="./style.css" />
+		<script>
+			window.ga =
+				window.ga ||
+				function() {
+					(ga.q = ga.q || []).push(arguments);
+				};
+			ga.l = +new Date();
+			ga("create", "UA-118277271-1", "auto");
+			ga("send", "pageview");
+		</script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+		<script async src="https://www.google-analytics.com/analytics.js"></script>
+		<script
+			defer
+			src="https://use.fontawesome.com/releases/v5.0.10/js/brands.js"
+			integrity="sha384-6jhVhr5a+Z1nLr9h+fd7ocMEo847wnGFelCHddaOOACUeZNoQwFXTxh4ysXVam8u"
+			crossorigin="anonymous"
+		></script>
+		<script
+			defer
+			src="https://use.fontawesome.com/releases/v5.0.10/js/fontawesome.js"
+			integrity="sha384-M2FSA4xMm1G9m4CNXM49UcDHeWcDZNucAlz1WVHxohug0Uw1K+IpUhp/Wjg0y6qG"
+			crossorigin="anonymous"
+		></script>
+	</head>
 
-	<meta property="og:type" content="website">
-	<meta property="og:title" content="Evan Hennessy :: Web Portfolio">
-	<meta property="og:url" content="https://hennessyevan.com/">
-	<meta property="og:image" content="grab.png">
-	<meta property="twitter:site" content="hennessyevan">
-	<meta property="twitter:creator" content="hennessyevan">
-	<meta property="twitter:title" content="Evan Hennessy's Web Site">
-	<meta property="twitter:description" content="Evan Hennessy's 2018 Web Portfolio">
-	<meta property="twitter:image" content="grab.png">
-	<link rel="stylesheet" href="./style.css">
-	<script>
-		window.ga = window.ga || function () { (ga.q = ga.q || []).push(arguments) }; ga.l = +new Date;
-		ga('create', 'UA-118277271-1', 'auto');
-		ga('send', 'pageview');
-	</script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
-	<script async src='https://www.google-analytics.com/analytics.js'></script>
-	<script defer src="https://use.fontawesome.com/releases/v5.0.10/js/brands.js" integrity="sha384-6jhVhr5a+Z1nLr9h+fd7ocMEo847wnGFelCHddaOOACUeZNoQwFXTxh4ysXVam8u"
-	 crossorigin="anonymous"></script>
-	<script defer src="https://use.fontawesome.com/releases/v5.0.10/js/fontawesome.js" integrity="sha384-M2FSA4xMm1G9m4CNXM49UcDHeWcDZNucAlz1WVHxohug0Uw1K+IpUhp/Wjg0y6qG"
-	 crossorigin="anonymous"></script>
-</head>
-
-<body>
-	<canvas></canvas>
-	<div class="text">
-		<h1 class="title">
-			<span class="letter">E</span>
-			<span class="letter">V</span>
-			<span class="letter">A</span>
-			<span class="letter">N</span>
-			<span class="letter space">&nbsp;</span>
-			<span class="letter">H</span>
-			<span class="letter">E</span>
-			<span class="letter">N</span>
-			<span class="letter">N</span>
-			<span class="letter">E</span>
-			<span class="letter">S</span>
-			<span class="letter">S</span>
-			<span class="letter">Y</span>
-		</h1>
-		<span class="instructions">Click/Touch and Drag to create ink</span>
-		<div class="social-icons">
-			<a href="//twitter.com/hennessyevan" rel="noopener" target="_blank" class="twitter">
-				<i class="fab fa-twitter"></i>
-			</a>
-			<a href="//instagram.com/hennessyevan" rel="noopener" target="_blank" class="instagram">
-				<i class="fab fa-instagram"></i>
-			</a>
-			<a href="//github.com/hennessyevan" rel="noopener" target="_blank" class="github">
-				<i class="fab fa-github"></i>
-			</a>
-			<a href="//medium.com/@hennessyevan" rel="noopener" target="_blank" class="medium">
-				<i class="fab fa-medium"></i>
-			</a>
+	<body>
+		<canvas></canvas>
+		<div class="text">
+			<h1 class="title">
+				<span class="letter">E</span>
+				<span class="letter">V</span>
+				<span class="letter">A</span>
+				<span class="letter">N</span>
+				<span class="letter space">&nbsp;</span>
+				<span class="letter">H</span>
+				<span class="letter">E</span>
+				<span class="letter">N</span>
+				<span class="letter">N</span>
+				<span class="letter">E</span>
+				<span class="letter">S</span>
+				<span class="letter">S</span>
+				<span class="letter">Y</span>
+			</h1>
+			<span class="instructions">Click/Touch and Drag to create ink</span>
+			<div class="social-icons">
+				<a href="//twitter.com/hennessyevan" rel="noopener" target="_blank" class="twitter">
+					<svg
+						xmlns="http://www.w3.org/2000/svg"
+						width="24"
+						height="24"
+						viewBox="0 0 24 24"
+						fill="none"
+						stroke="currentColor"
+						stroke-width="2"
+						stroke-linecap="round"
+						stroke-linejoin="round"
+						class="feather feather-twitter"
+					>
+						<path
+							d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"
+						></path>
+					</svg>
+				</a>
+				<a href="//github.com/hennessyevan" rel="noopener" target="_blank" class="github">
+					<svg
+						xmlns="http://www.w3.org/2000/svg"
+						width="24"
+						height="24"
+						viewBox="0 0 24 24"
+						fill="none"
+						stroke="currentColor"
+						stroke-width="2"
+						stroke-linecap="round"
+						stroke-linejoin="round"
+						class="feather feather-github"
+					>
+						<path
+							d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"
+						></path>
+					</svg>
+				</a>
+				<a href="//medium.com/@hennessyevan" rel="noopener" target="_blank" class="medium">
+					<svg
+						xmlns="http://www.w3.org/2000/svg"
+						width="24"
+						height="24"
+						viewBox="0 0 24 24"
+						fill="none"
+						stroke="currentColor"
+						stroke-width="2"
+						stroke-linecap="round"
+						stroke-linejoin="round"
+						class="feather feather-edit-3"
+					>
+						<path d="M12 20h9"></path>
+						<path d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"></path>
+					</svg>
+				</a>
+			</div>
 		</div>
-	</div>
-	<span class="after">Canadian developer with a passion for good work and tasty integrations. Philosophy/Music Major turned Entrepreneur/Software
-		Developer.
-	</span>
-	<script src="./script.js"></script>
-</body>
-
+		<span class="after"
+			>Canadian developer with a passion for good work and tasty integrations. Philosophy/Music Major turned Entrepreneur/Software Developer.
+		</span>
+		<script src="./script.js"></script>
+	</body>
 </html>
